<resources>
    <string name="app_name">PlantWateringApp</string>
    <string name="action_settings">Settings</string>

    <string name="number_of_days_between_watering">Number of Days Between Watering</string>
    <string name="plant_name">Plant Name</string>
    <string name="additional_care_instructions">Additional Care Instructions</string>
    <string name="water_your_plants">Water Your Plants!</string>
    <string name="number_of_days_s">Number of Days: %s</string>
    <string name="watering_s">Watering: %s</string>
    <string name="select_date_last_watered">Select Date Last Watered</string>
    <string name="cancel">Cancel</string>
    <string name="date_last_watered">Date Last Watered</string>
    <string name="next_watering">Next Watering</string>
    <string name="watered">Watered?</string>
    <string name="plant_details">Plant Details</string>
    <string name="additional_instructs">Additional Care Instructions</string>
    <string name="number_of_days_between_watering_s">Number of Days Between Watering: %s</string>
    <string name="date_last_watered_s">Date Last Watered: %s</string>
    <string name="date_of_next_watering_s">Date of Next Watering: %s</string>
</resources>
