<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rage.plantwateringapp.AddPlantDialogFragment">


   <android.support.design.widget.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <android.support.design.widget.TextInputEditText
           android:id="@+id/add_plant_plant_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/plant_name"
           />
   </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_plant_number_of_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_days_between_watering"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_plant_additional_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_care_instructions"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_plant_date_last_watered_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date Last Watered"
        />


</LinearLayout>
